Applied patches to perfetto from Chromium 115.0.5790.110 FreeBSD port.

--- a/gn/standalone/BUILD.gn
+++ b/gn/standalone/BUILD.gn
@@ -484,3 +484,14 @@ perfetto_check_build_deps("check_build_deps") {
 perfetto_check_build_deps("check_build_deps_android") {
   args = [ "--android" ]
 }
+
+config("purecap") {
+  cflags = [
+    "-Wno-excess-padding",
+    "-Wno-thread-safety-negative"
+  ]
+  cflags_cc = [
+    "-Wno-excess-padding",
+    "-Wno-thread-safety-negative"
+  ]
+}
