--- a/gn/standalone/BUILDCONFIG.gn
+++ b/gn/standalone/BUILDCONFIG.gn
@@ -39,6 +39,8 @@ is_mac = current_os == "mac"
 is_mac_host = host_os == "mac"
 is_win = current_os == "win"
 is_win_host = host_os == "win"
+is_bsd = current_os == "freebsd"
+is_bsd_host = host_os == "freebsd"
 
 # Building with Windows/Fuchsia/nacl is currently only supported in the Chromium
 # tree so always set this to false.
@@ -82,6 +84,8 @@ if (!is_debug) {
   default_configs -= [ "//gn/standalone:debug_symbols" ]
   default_configs += [ "//gn/standalone:release" ]
 }
+
+default_configs += ["//gn/standalone:purecap"]
 
 set_defaults("source_set") {
   configs = default_configs
