Various build conditionals for BSD platforms.

--- a/examples/shared_lib/BUILD.gn
+++ b/examples/shared_lib/BUILD.gn
@@ -23,4 +23,7 @@ executable("example_shlib_data_source") {
     "../../src/shared_lib:libperfetto_c",
   ]
   sources = [ "example_shlib_data_source.c" ]
+  if (is_bsd) {
+    libs = [ "stdthreads" ]
+  }
 }
