--- a/src/base/BUILD.gn
+++ b/src/base/BUILD.gn
@@ -22,7 +22,7 @@ import("../../gn/wasm.gni")
 # On standalone builds this is all the OSes we support. On chromium builds,
 # though, this really means !is_fuchsia && !is_nacl.
 _subprocess_supported =
-    is_linux || is_chromeos || is_android || is_mac || is_win
+    is_linux || is_chromeos || is_android || is_mac || is_win || is_bsd
 
 perfetto_component("base") {
   deps = [
@@ -79,11 +79,6 @@ perfetto_component("base") {
 
   if (enable_perfetto_stderr_crash_dump) {
     deps += [ ":debug_crash_stack_trace" ]
-  }
- 
-  if (is_bsd) {
-    include_dirs = [ "/usr/local/include/libepoll-shim" ]
-    libs = [ "epoll-shim" ]
   }
 }
 
